<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yyang3.tacoma.uw.edu.webservicelab.CourseAddFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_id_add"
        android:hint="@string/course_id_hint" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_short_add"
        android:hint="@string/course_short_desc_hint" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_long_add"
        android:hint="@string/course_long_desc_hint" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_prereqs_add"
        android:hint="@string/course_prereqs_hint" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/course_add"
        android:text="@string/add_course_text"
        android:layout_gravity="center_horizontal"
        android:onClick="addCourse"/>

</LinearLayout>
