<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yyang3.tacoma.uw.edu.webservicelab.authenticate.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_username"
        android:inputType="textEmailAddress"
        android:hint="@string/sign_in_id" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_passw"
        android:inputType="textPassword"
        android:hint="@string/sign_in_pw"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_but"
        android:id="@+id/sign_in_but"
        android:layout_gravity="right"/>


</LinearLayout>
